Prevented x overflow

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -14,6 +14,10 @@
   justify-content: center;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .form--input {
   display: block;
   padding: 10px;
